--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>Completed: <span id="completed-count">0</span> | Uncompleted: <span id="uncompleted-count">0</span></p>
     </div>
     <!-- Link to the JavaScript file -->
-    <script src="script.js"></script>
+    <script src="dist/script.js"></script>
 </body>
 </html>
 
